--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pulse</title>
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-	<link rel="stylesheet" href="css/fonts.css">
+	<link rel="stylesheet" href="css/font.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -50,7 +50,30 @@
 					<a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
 				</div>
 			</div>
+		</div>
+	</div>
 
+	<div class="advantages">
+		<div class="container">
+			<h2 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h2>
+
+			<div class="advantages__blocks">
+				<div class="advantages__block">
+					<img src="icons/advanteges/cup.png" alt="cup">
+					<div class="advantages__subheader">Делимся опытом</div>
+					<div class="advantages__descr">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+				</div>
+				<div class="advantages__block">
+					<img src="icons/advanteges/heart.png" alt="heart">
+					<div class="advantages__subheader">Заботимся о здоровье</div>
+					<div class="advantages__descr">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+				</div>
+				<div class="advantages__block">
+					<img src="icons/advanteges/shoe.png" alt="shoe">
+					<div class="advantages__subheader">Учим бегать</div>
+					<div class="advantages__descr">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
