--- a/src/index.html
+++ b/src/index.html
@@ -365,6 +365,70 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="reviews">
+		<div class="container">
+			<h2 class="title">отзывы клиентов</h2>
+
+			<div class="reviews__blocks">
+				<img src="img/feed_1.png" alt="feed" class="reviews__img">
+				<div class="reviews__text">
+					<div class="reviews__title">Ирина Иванченко</div>
+					<div class="reviews__subtitle">2 полумарафона</div>
+					<div class="reviews__descr">
+					Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же. 
+					<br><br>
+					Новые цели - новый гаджет! 
+					<br><br>
+					Спасибо, RunSmart!
+					</div>
+				</div>
+			</div>
+			<div class="reviews__blocks">
+				<img src="img/feed_2.png" alt="feed" class="reviews__img">
+				<div class="reviews__text">
+					<div class="reviews__title">Иван Сёмочкин</div>
+					<div class="reviews__subtitle">1 полумарафон</div>
+					<div class="reviews__descr">
+					Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. 
+					<br>
+					Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд. <br><br>
+					С ними подготовился к своему первому полумарафону! Спасибо!!!
+					</div>
+				</div>
+			</div>
+			<div class="reviews__blocks">
+				<img src="img/feed_3.png" alt="feed" class="reviews__img">
+				<div class="reviews__text">
+					<div class="reviews__title">Юлия Дашкина</div>
+					<div class="reviews__subtitle">2 полумарафона</div>
+					<div class="reviews__descr">
+					Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать. 
+					<br><br>
+					Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!
+					<br><br>
+					Спасибо!!!
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer class="footer">
+		<div class="footer__map">
+			<!-- <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A0a1aa83bbdf1be7f9e78f13eb189f40c627768023ea3049d1bd807caf82009a5&amp;source=constructor" width="100%" height="630" frameborder="0"></iframe> -->
+			<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A0a1aa83bbdf1be7f9e78f13eb189f40c627768023ea3049d1bd807caf82009a5&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=false"></script>
+		</div>
+		<div class="footer__info">
+			<address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+			<a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
+			<div class="footer__social">
+				<a href="#" class="footer__social-item"><img src="icons/facebook.svg" alt="facebook"></a>
+				<a href="#" class="footer__social-item"><img src="icons/instagram.svg" alt="instagram"></a>
+				<a href="#" class="footer__social-item"><img src="icons/pinterest.svg" alt="pinterest"></a>
+			</div>
+		</div>
+	</footer>
 	
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
