--- a/src/index.html
+++ b/src/index.html
@@ -384,6 +384,13 @@
 					</div>
 				</div>
 			</div>
+			<div class="reviews__descr reviews__descr_block">
+				Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же. 
+				<br><br>
+				Новые цели - новый гаджет! 
+				<br><br>
+				Спасибо, RunSmart!
+				</div>
 			<div class="reviews__blocks">
 				<img src="img/feed_2.png" alt="feed" class="reviews__img">
 				<div class="reviews__text">
@@ -397,6 +404,12 @@
 					</div>
 				</div>
 			</div>
+			<div class="reviews__descr reviews__descr_block">
+				Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. 
+				<br>
+				Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд. <br><br>
+				С ними подготовился к своему первому полумарафону! Спасибо!!!
+				</div>
 			<div class="reviews__blocks">
 				<img src="img/feed_3.png" alt="feed" class="reviews__img">
 				<div class="reviews__text">
@@ -411,6 +424,13 @@
 					</div>
 				</div>
 			</div>
+			<div class="reviews__descr reviews__descr_block">
+				Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать. 
+				<br><br>
+				Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!
+				<br><br>
+				Спасибо!!!
+				</div>
 		</div>
 	</section>
 
